# Modern-Cpp-Course

./: README.md
Homework-1/task_1/: commands.sh
Homework-1/task_2/: CMakeLists.txt  build.sh
Homework-2/task_1/: CMakeLists.txt
Homework-2/task_1/guessing_game/: CMakeLists.txt
Homework-2/task_1/guessing_game/header/: guessing_game.hpp
Homework-2/task_1/guessing_game/src/: guessing_game.cpp
Homework-2/task_1/main/: CMakeLists.txt
Homework-2/task_1/main/src/: main.cpp
Homework-2/task_2/: CMakeLists.txt
Homework-2/task_2/src/: main.cpp
Miscellaneous/CMake_Tutorial/cmake-good-1a-basic-compile/: CMakeLists.txt
Miscellaneous/CMake_Tutorial/cmake-good-1b-library-compile/: CMakeLists.txt  hello.cpp
Miscellaneous/CMake_Tutorial/cmake-good-1c-subdirectories/: CMakeLists.txt
Miscellaneous/CMake_Tutorial/cmake-good-1c-subdirectories/hello-main/: CMakeLists.txt
Miscellaneous/CMake_Tutorial/cmake-good-1c-subdirectories/say-hello/: CMakeLists.txt
Miscellaneous/CMake_Tutorial/cmake-good-2a-scripting-basics/: CMakeLists.txt
Miscellaneous/CMake_Tutorial/cmake-good-2b-control-flow/: CMakeLists.txt
Miscellaneous/Cpp_Misc/: CMakeLists.txt
Miscellaneous/Cpp_Misc/main/: CMakeLists.txt
Miscellaneous/Cpp_Misc/main/src/: main.cpp
Miscellaneous/Cpp_Misc/visual_profiler/: CMakeLists.txt
Miscellaneous/Profilers/: CMakeLists.txt
Miscellaneous/Profilers/main/: CMakeLists.txt  results.json
Miscellaneous/Profilers/main/src/: main.cpp
Miscellaneous/Profilers/textual_profiler/: CMakeLists.txt
Miscellaneous/Profilers/visual_profiler/: visual_profiler.h
(+7 files in other folders)
